# motor-sim

./: .gitignore  README.md  agent.md  pyproject.toml
control/: 01_foc_sensored.py  02_sensorless_backemf.py  03_sensorless_hfi_pulsating.py  04_sensorless_hfi_squarewave.py  05_sensorless_ekf.py  06_startup_polarity_id.py  07_lowspeed_0to5.py  08_fullrange_fusion.py  09_if_opencontrol.py  10_position_servo_closedloop.py  11_foc_svpwm_observe.py  11_multirate_timing.py
core/: __init__.py  motorsim_core.py  motorsim_inverter.py  motorsim_sensors.py
data/real/: README.md
docs/: 00_overview.md  01_architecture.md  02_physics_core.md  03_control_methods.md  04_hardware_ihm07m1.md  05_hardware_deployment.md
extensions/: README.md  custom_controller.py  custom_sensor.py
firmware/: README.md  platformio.ini
firmware/ihm07m1_foc/: README.md
firmware/ihm07m1_foc/docs/: validation_report_template.md
firmware/ihm07m1_foc/include/: bsp_ihm07m1.h  foc.h  param_id.h  stm32f3xx_hal_conf.h
firmware/ihm07m1_foc/src/: bsp_ihm07m1.c  foc.c  foc_sensorless.c  param_id.c  stm32f3xx_it.c
firmware/include/: foc.h
firmware/src/: main.c
firmware/test/: gen_golden.py  golden.h  run_host_test.sh  test_foc_host.c
hardware/: README.md  __init__.py  hardware_profile.py  ihm07m1.py
hardware/motor/: __init__.py  motor_library.py
interactive/: README.md  server.py  sim_engine.py
interactive/static/: index.html
presets/: example_ihm07m1.py
skills/motorsim/: SKILL.md
skills/pio/: SKILL.md
tools/: make_synthetic_golden.py  regress.py
(+4 files in other folders)
